ci: add cloudflare analytics

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,15 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Coming Soon</title>
+		<title>Blog | Rafli Malik</title>
 	</head>
 	<body>
 		<h1>Coming Soon</h1>
+		<!-- Cloudflare Web Analytics -->
+		<script
+			defer
+			src="https://static.cloudflareinsights.com/beacon.min.js"
+			data-cf-beacon='{"token": "c35701a9b6a24f8b83f82c165fc37c96"}'
+		></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
