--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,15 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="/src/styles/global.css" />
 		<title>Blog | Rafli Malik</title>
 	</head>
 	<body>
-		<h1>Coming Soon</h1>
+		<main
+			class="min-h-dvh h-fit min-w-dvw max-w-full flex flex-col items-center justify-center gap-8">
+			<h1 class="text-2xl sm:text-3xl md:text-34xl lg:text-5xl">Coming Soon...</h1>
+			<hr class="w-1/4 h-1 bg-zinc-300" />
+		</main>
 		<!-- Cloudflare Web Analytics -->
 		<script
 			defer
