chore(deps): update package

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,9 @@
 	<body>
 		<main
 			class="min-h-dvh h-fit min-w-dvw max-w-full flex flex-col items-center justify-center gap-8">
-			<h1 class="text-2xl sm:text-3xl md:text-34xl lg:text-5xl">Coming Soon...</h1>
+			<h1 class="text-2xl sm:text-3xl md:text-34xl lg:text-5xl">
+				Coming Soon...
+			</h1>
 			<hr class="w-1/4 h-1 bg-zinc-300" />
 		</main>
 		<!-- Cloudflare Web Analytics -->
