feat: add meta desc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,13 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+    <meta charset="utf-8" />
+		<title>Blog | Rafli Malik</title>
+    <meta name="description" content="Rafli Malik personal blog.">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="/src/styles/global.css" />
-		<title>Blog | Rafli Malik</title>
 	</head>
 	<body>
 		<main
