--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,21 @@
 
 <html lang="en">
 	<head>
-    <meta charset="utf-8" />
+		<meta charset="utf-8" />
 		<title>Blog | Rafli Malik</title>
-    <meta name="description" content="Rafli Malik personal blog.">
+		<meta name="description" content="Rafli Malik personal blog." />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="/src/styles/global.css" />
+
+		<meta property="og:title" content="Rafli Malik" />
+		<meta
+			property="og:description"
+			content="Front End Developer and Tech Enthusiast"
+		/>
+		<meta property="og:url" content="https://www.raflimalik.com/" />
+		<meta property="og:site_name" content="Rafli Malik" />
 	</head>
 	<body>
 		<main
