--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
 	<main
 		class="min-h-dvh h-fit min-w-dvw max-w-full flex flex-col items-center justify-center gap-8">
-		<h1 class="text-2xl sm:text-3xl md:text-34xl lg:text-5xl text-[#8C5CFF]">
+		<h1 class="text-2xl sm:text-3xl md:text-34xl lg:text-5xl text-[#8C5CFF] font-light">
 			Coming Soon...
 		</h1>
 		<hr class="w-1/4 h-1 bg-zinc-300" />
